--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,16 +21,9 @@ stages:
       vmImage: ubuntu-latest
     steps:
     - task: Docker@2
-      displayName: Build an image
       inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/azure-vote/Dockerfile'
-        tags: |
-          $(tag)
-    - task: DockerCompose@0
-      inputs:
-        containerregistrytype: 'Azure Container Registry'
-        azureSubscription: 'AzurePipeline'
-        azureContainerRegistry: '{"loginServer":"selvanregistry.azurecr.io", "id" : "/subscriptions/8dd549a5-a0ea-4590-8c78-d22e3a52b273/resourceGroups/testrg/providers/Microsoft.ContainerRegistry/registries/selvanregistry"}'
-        dockerComposeFile: '**/docker-compose.yml'
-        action: 'Run a Docker Compose command'
+        containerRegistry: 'dockerconn'
+        repository: 'selvanregistry'
+        command: 'buildAndPush'
+        Dockerfile: '**/Dockerfile'
+    
