--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ stages:
   jobs:
   - deployment: deploy
     displayName: Deploy
-    environment:  K8s
+    environment:  xyz
     strategy: 
       runOnce:
         deploy:
