--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,6 +41,7 @@ stages:
             displayName: Deploy to Kubernetes cluster
             inputs:
               action: deploy
+              kubernetesServiceConnection: K8s-selvanaks-default-1618203105101
               #namespace: $(k8sNamespace)
               manifests: $(System.ArtifactsDirectory)/**/azure-vote-all-in-one-redis.yaml
               #imagePullSecrets: $(imagePullSecret)
