Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,6 +43,6 @@ stages:
               action: deploy
               kubernetesServiceConnection: K8s-selvanaks-default-1618203105101
               #namespace: $(k8sNamespace)
-              manifests: $(System.ArtifactsDirectory)/**/azure-vote-all-in-one-redis.yaml
+              manifests: azure-vote-all-in-one-redis.yaml
               #imagePullSecrets: $(imagePullSecret)
               #containers: $(containerRegistry)/$(imageRepository):$(tag)
