--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,12 +49,19 @@ stages:
       runOnce:
         deploy:
           steps:
-          - task: KubernetesManifest@0
-            displayName: Deploy to Kubernetes cluster
-            inputs:
-              action: deploy
-              kubernetesServiceConnection: K8s-selvanaks-default-1618203105101
-              #namespace: $(k8sNamespace)
-              manifests: azure-vote-all-in-one-redis.yaml
-              #imagePullSecrets: $(imagePullSecret)
-              #containers: $(containerRegistry)/$(imageRepository):$(tag)
+           - task: Bash@3
+             inputs:
+                targetType: 'inline'
+                script: |
+                  pwd
+                  ls -a
+
+           - task: KubernetesManifest@0
+             displayName: Deploy to Kubernetes cluster
+             inputs:
+                action: deploy
+                kubernetesServiceConnection: K8s-selvanaks-default-1618203105101
+                #namespace: $(k8sNamespace)
+                manifests: azure-vote-all-in-one-redis.yaml
+                #imagePullSecrets: $(imagePullSecret)
+                #containers: $(containerRegistry)/$(imageRepository):$(tag)
