Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,6 +49,14 @@ stages:
       runOnce:
         deploy:
           steps:
+           - task: DownloadBuildArtifacts@0
+             displayName: 'Download the build artifacts'
+             inputs:
+                  buildType: 'current'
+                  downloadType: 'single'
+                  artifactName: 'drop'
+                  downloadPath: '$(System.DefaultWorkingDirectory)'
+
            - task: Bash@3
              inputs:
                 targetType: 'inline'
