--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,10 +27,10 @@ stages:
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
     - task: PublishBuildArtifacts@1
+      displayName: Publish package ready for deployment
       inputs:
-        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-        ArtifactName: 'drop'
-        publishLocation: 'Container'
+        PathtoPublish: '$(System.DefaultWorkingDirectory)/*.*'
+        artifactName: 'drop'
     
     - task: Bash@3
       inputs:
