--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ stages:
     - task: PublishBuildArtifacts@1
       displayName: Publish package ready for deployment
       inputs:
-        PathtoPublish: '$(System.ArtifactsDirectory)/azure-vote-all-in-one-redis.yaml'
+        PathtoPublish: '$(System.DefaultWorkingDirectory)/azure-vote-all-in-one-redis.yaml'
         artifactName: 'drop'
     
     - task: Bash@3
