--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,7 +44,7 @@ stages:
   jobs:
   - deployment: deploy
     displayName: Deploy
-    environment: 'smarthotel-dev'
+    environment: newk.default
     strategy: 
       runOnce:
         deploy:
